# analise_de_microplasticos

./: .gitignore  pyproject.toml  run.py
analise_de_microplasticos/arquivo_identificacao/: Identificacao_polimero.xlsx
analise_de_microplasticos/arquivos/: Amostra A.xlsx  Amostra B.xlsx  Amostra C.xlsx  Amostra D.xlsx  Amostra E.xlsx
extract/: coleta.py  diretorio.py
load/: analise.py  graficos.py
transform/: montando.py
