[tool.poetry]
name = "postagem-0002"
version = "0.1.0"
description = ""
authors = ["Wendel <wendelvaccani@gmail.com>"]
readme = "README.md"
packages = [{include = "postagem_0002"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
openpyxl = "^3.1.2"
pyvirtualdisplay = "^3.0"
seaborn = "^0.12.2"
tqdm = "^4.65.0"
more-itertools = "^9.1.0"
pypdf2 = "^3.0.1"
pyqt5 = "^5.15.9"
poetry-lock-package = "^0.5.0"


[tool.poetry.group.dev.dependencies]
poetry-lock-package = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
